fix: spacing

--- a/11ty/_postcss/components/_intro.pcss
+++ b/11ty/_postcss/components/_intro.pcss
@@ -4,5 +4,8 @@
 
 .c-intro__heading {
   margin-top: 0;
+}
+
+.page-post .c-intro__heading {
   margin-bottom: 0;
 }
