--- a/11ty/_postcss/roots/_typography.pcss
+++ b/11ty/_postcss/roots/_typography.pcss
@@ -1,6 +1,6 @@
 :root {
   --type-base-font-size: 18;
-  --type-base-line-height: 28.8;
+  --type-base-line-height: 24;
   --type-scale-5: 1.333333333;
   --type-scale-4: 1.222222222;
   --type-scale-3: 1.111111111;
